# mpei

./: .gitignore  LICENSE  README.md  pyproject.toml  streamlit_app.py
raw_labs/: cg2.py  kurs.py  lab1.py  lab2.py  test.py
sem_5_debts/cg/: pyproject.toml
sem_5_debts/cg/l9/: pyproject.toml
sem_5_debts/cg/l9/src/l9/: main.py  menu.py
sem_5_debts/cg_tauri/: package.json
sem_5_debts/cg_tauri/src/: App.css  App.tsx
sem_5_debts/cg_tauri/src-tauri/: Cargo.toml  tauri.conf.json
sem_5_debts/cg_tauri/src-tauri/src/: main.rs
sem_5_debts/cg_tauri/src/components/: Tabs.css  Tabs.tsx
sem_5_debts/cg_tauri/src/pages/: Home.tsx  Settings.tsx
sem_5_debts/cg_tauri/src/types/: index.ts
sem_5_debts/evm/: .gitignore
sem_5_debts/evm/IdNameTable/: IdNameTable.cbproj  IdNameTable.cpp  IdNameTable.h
sem_5_debts/evm/IdNameTable/__history/: IdNameTable.cpp.~1~  IdNameTable.cpp.~2~  IdNameTable.cpp.~3~  (+12 more)
sem_5_debts/evm/LexicalBlock/: LexicalBlock.cbproj  LexicalBlock.cpp  LexicalBlock.h
sem_5_debts/evm/SyntaxAnalyzer/: SyntaxAnalyzer.cbproj  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h
sem_5_debts/evm/l1/: l1.cbproj  l1_all.groupproj  main.cpp
sem_5_debts/evm/l2/: LexicalBlock.cpp  LexicalBlock.h  Main.dfm  l2.cbproj  l2_all.groupproj
sem_5_debts/evm/l3/: Main.cpp  Main.dfm  Main.h  l3.cbproj  l3_all.groupproj
sem_5_debts/numerical_analysis/: Untitled.ipynb  lab6.ipynb  pyproject.toml  start-l6.ps1  ЧМ6_Задание.docm
sem_5_debts/numerical_analysis/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  mylib-checkpoint.py
streamlit_pages/: kurs.py
(+87 files in other folders)
