[project]
name = "cg"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "matplotlib>=2.2.5",
    "numpy>=1.12.1",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=0.21.0",
    "scipy>=1.17.0",
    "tabulate>=0.9.0",
    "tensorflow>=1.3.0",
]

[tool.uv.workspace]
members = [
    "l9",
]
