[project]
name = "l9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wowaq", email = "tutbylkot@gmail.com" }
]
requires-python = "==3.11.*"
dependencies = []

[project.scripts]
l9 = "l9:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
